--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/achieve.css">
 </head>
 <body>
 
@@ -83,10 +84,7 @@
             </div>
             <div class="about">
                 <p class="aboutme">
-                    Hey peeps! I’m Rakkesh, a computer science undergrad who’s obsessed with building tech that 
-                    actually matters. Whether it’s AI, smart systems, or wild UI ideas like this site 
-                    (yep, I coded this!), I love turning random sparks into working stuff. Currently deep 
-                    into ML, embedded systems, and whatever else keeps my brain buzzing.
+                    Hey peeps! I’m Rakkesh, a computer science undergrad who’s obsessed with building tech that actually matters. Whether it’s AI, smart systems, or wild UI ideas like this site (yep, I coded this!), I love turning random sparks into working stuff. Currently deep into ML, embedded systems, and whatever else keeps my brain buzzing.
                 </p>
                 <div class="aboutgrid">
                     <div class="left-top ab">
@@ -136,10 +134,7 @@
 
             <div class="skillcontain">
                 <p class="aboutme">
-                    Most of what I know comes from chasing curiosity through YouTube, Udemy, and a whole lot of ChatGPT 
-                    convos. I don’t just learn tools. I pick up skills when there's a purpose behind them. 
-                    Whether it's building something new or solving a problem, it’s this loop of learning and 
-                    applying that keeps my skillset sharp and growing. Scroll through each category!
+                    Most of what I know comes from chasing curiosity through YouTube, Udemy, and a whole lot of ChatGPT convos. I don’t just learn tools. I pick up skills when there's a purpose behind them. Whether it's building something new or solving a problem, it’s this loop of learning and applying that keeps my skillset sharp and growing. Scroll through each category!
                 </p>
                 <div class="skillshow">
                     <div class="skill-card"><div class="card-content">
@@ -203,9 +198,7 @@
             </div>
             <div class="projectcontain">
                 <p class="aboutme">
-                    You’ve probably scrolled through Sector 2 by now. Cool stuff, right? But what’s the point of knowing all 
-                    that if it hasn’t been put to work? Projects are where everything clicks, skills meet ideas, and concepts 
-                    turn into actual things. From casual builds to more focused problem-solving, this is the zone where my curiosity turns into creation. 
+                    You’ve probably scrolled through Sector 2 by now. Cool stuff, right? But what’s the point of knowing all that if it hasn’t been put to work? Projects are where everything clicks, skills meet ideas, and concepts turn into actual things. From casual builds to more focused problem-solving, this is the zone where my curiosity turns into creation. 
                 </p>
                 <div class="projectcards">
                     <button class="pleft" id="pleft"></button>
@@ -216,23 +209,16 @@
                         <div class="project-content">
                           <div class="top-box" id="p2"></div>
                           <div class="bottom-box" id="p3">
-                            H.E.D.I.S (Helmet Detection Ignition System) is a rider safety system I developed over the span of a year with ₹1,00,000 seed funding from my uni. 
-                            It uses YOLOv5 Object Detection integrated via Flask backend and a custom web front end to detect helmet usage in real time. 
-                            If the rider isn’t wearing a helmet, the bike responds by gradually reducing speed with escalating alerts. I built an entire electric bike from scratch 
-                            to house the HEDIS module, and it’s been fully road tested. The system is now being considered for deployment within the uni campus. 
-                            This wasn’t just a prototype. It was a proof of what one idea can become when taken all the way.
+                            H.E.D.I.S (Helmet Detection Ignition System) is a rider safety system I developed over the span of a year with ₹1,00,000 seed funding from my uni. It uses YOLOv5 Object Detection integrated via Flask backend and a custom web front end to detect helmet usage in real time. If the rider isn’t wearing a helmet, the bike responds by gradually reducing speed with escalating alerts. I built an entire electric bike from scratch to house the HEDIS module, and it’s been fully road tested. The system is now being considered for deployment within the uni campus. This wasn’t just a prototype. It was a proof of what one idea can become when taken all the way.
                           </div>
                         </div>
                       </div>
                       <div class="project-card second-card">
-                        <div class="project-title" id="p4">Online Board Game</div>
+                        <div class="project-title" id="p4">E.L.Y.R.A</div>
                         <div class="project-content">
                           <div class="top-box box2" id="p5"></div>
                           <div class="bottom-box" id="p6">
-                            An online multi player board game I developed from scratch using full stack web dev skills. Built on Express with PgAdmin handling the database, 
-                            it features real time gameplay powered by Web Sockets, alongside Bootstrap, HTML, CSS, and JavaScript for a custom designed interface. 
-                            Players can sign up with a secure auth mechanism, store progress in a dedicated user database, create private rooms to challenge friends, 
-                            or go head-to-head with an AI opponent powered by the Mini max algorithm. Every UI element was designed by hand for a clean, intuitive experience.
+                            E.L.Y.R.A (Elastic Learning Yield for Resource Allocation) is a smart system I’ve been building that uses AI to manage and improve how 5G networks work. It’s all about making things faster, smoother, and more efficient. The image above is AI-generated and just gives a rough idea. The real stuff is still under wraps because ELYRA is in active development right now. Full details are kept Classified until it’s ready to be revealed. But yeah, this one’s special. Stay tuned!
                           </div>
                         </div>
                       </div>
@@ -251,7 +237,63 @@
                 <h1 class="sector-label">SECTOR 4</h1>
                 <h2 class="about-label">ACHIEVEMENTS</h2>
             </div>
+            <div class="achievementcontain">
+                <p class="aboutme">
+                    You’ve probably seen what I’ve built. Now here’s where those efforts actually got noticed. This isn’t just a list of shiny titles or certificates, it’s a reflection of moments where the grind paid off. Whether it's recognition from institutions, competitions, or just personal milestones that mattered, these achievements mark the times when curiosity met consistency and turned into impact. 
+                </p>
+                <div class="achcont">
+                    <div class="lf">◀</div>
+                    <div class="achcontent">
+                        <div class="achcard">
+                            <div class="ach-date">26/11/2022</div>
+                            <div class="ach-timeline"><div class="dash" style="background-color: transparent;"></div><div class="circle">1</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>Talent Hunt</h3><div class="achimg" style="background-image: url('images/a1.jpg');"></div><p>This is my first win ever in my uni life. 2nd place in the "Artist Impression" event conducted as a part of Talent Hunt 2022 SIST. I was awarded with a certificate and ₹1,500 cash prize.</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">03/03/2023</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">2</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>Cultural Fest</h3><div class="achimg" style="background-image: url('images/a2.jpg');"></div><p>My second art contest win at uni. Got 2nd place in the "Portrait drawing" event conducted as a part of cultural fest 2023. I also received a cash prize of ₹2,000</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">16/03/2023</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">3</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>Front Cover</h3><div class="achimg" style="background-image: url('images/a3.jpg');"></div><p>I drew the front cover for a novel published world wide, called "Exceptional Cuisine" which reached the Royal Sheriff of Chester, United Kingdom. This was the first time my art went into the hands of someone outside India.</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">07/07/2023</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">4</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>9th Uni Rank</h3><div class="achimg" style="background-image: url('images/a4.jpg');"></div><p>My first academic award for securing 9th uni rank out of 1800 students in the computer science department. Was presented with the Chancellor Scholarship certificate with a cheque of ₹18,500. CGPA at that time was 9.68</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">17/12/2023</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">5</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>My First Novel</h3><div class="achimg" style="background-image: url('images/a6.jpg');"></div><p>My Novel "Whispers Across the Worlds", a super-natural, light romance, psychology novel. It took 6 solid months of consistency to write this masterpiece. Self published and Sold about 50 copies with many positive reviews! PS: I also drew the front cover with my own hands</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">03/01/2024</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">6</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>Hackathon</h3><div class="achimg" style="background-image: url('images/a5.jpg');"></div><p>Won 2nd place in the Hackathon organized my OneYes Infotech Solutions in partnership with Ethiraj college, Chennai. H.E.D.I.S was presented for the first time as a table top prototype which impressed the judges, leading to my success.</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">04/07/2024</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">7</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>4th Uni Rank</h3><div class="achimg" style="background-image: url('images/a7.jpg');"></div><p>The Chancellor Scholarship again for the second consecutive year! But this time, it was for securing the 9th uni rank (a climb from the previous 4th) Received a cheque of ₹18,500 once again. My CGPA was 9.55 during this time. Happens when academics meets consistency!</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">03/03/2025</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">8</div><div class="dash"></div></div>
+                            <div class="ach-content-card"><h3>HEDIS Success</h3><div class="achimg" style="background-image: url('images/a9.jpg');"></div><p>H.E.D.I.S, my Seed funded project which you already read about in projects section received the attention and a plunder of appreciation from the respected Chancellor Dr. Maria Zeena Johnson ma'am. My efforts were finally recognised as a high impact outcome.</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">24/04/2025</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">9</div><div class="dash" style="background-color: transparent;"></div></div>
+                            <div class="ach-content-card"><h3>Luminary Award</h3><div class="achimg" style="background-image: url('images/a8.jpg');"></div><p>The Luminary award, presented by my university for the exceptional contributions and commitment displayed for a period of 3 years in the campus. This served as a huge confidence boost. Makes me wanna keep pushing and hustling to the best I can, knowing that my story is seen and appreciated!</p><div class="achscr">▼</div></div>
+                        </div>
+                    </div>
+                    <div class="rf">▶</div>
+                </div>
 
+            </div>
             <img class="toprail" src="images/toprail.png">
             <img class="tracks" src="images/tracks.png">
             <img class="bottomrail" src="images/toprail.png">
