--- a/index.html
+++ b/index.html
@@ -282,12 +282,12 @@
                         <div class="achcard">
                             <div class="ach-date">03/03/2025</div>
                             <div class="ach-timeline"><div class="dash"></div><div class="circle">8</div><div class="dash"></div></div>
-                            <div class="ach-content-card"><h3>HEDIS Success</h3><div class="achimg" style="background-image: url('images/a9.jpg');"></div><p>H.E.D.I.S, my Seed funded project which you already read about in projects section received the attention and a plunder of appreciation from the respected Chancellor Dr. Maria Zeena Johnson ma'am. My efforts were finally recognised as a high impact outcome.</p><div class="achscr">▼</div></div>
+                            <div class="ach-content-card"><h3>H.E.D.I.S</h3><div class="achimg" style="background-image: url('images/a9.jpg');"></div><p>H.E.D.I.S, my Seed funded project which you already read about in projects section received the attention and a plunder of appreciation from the respected Chancellor Dr. Maria Zeena Johnson ma'am. My efforts were finally recognised as a high impact outcome.</p><div class="achscr">▼</div></div>
                         </div>
                         <div class="achcard">
                             <div class="ach-date">24/04/2025</div>
                             <div class="ach-timeline"><div class="dash"></div><div class="circle">9</div><div class="dash" style="background-color: transparent;"></div></div>
-                            <div class="ach-content-card"><h3>Luminary Award</h3><div class="achimg" style="background-image: url('images/a8.jpg');"></div><p>The Luminary award, presented by my university for the exceptional contributions and commitment displayed for a period of 3 years in the campus. This served as a huge confidence boost. Makes me wanna keep pushing and hustling to the best I can, knowing that my story is seen and appreciated!</p><div class="achscr">▼</div></div>
+                            <div class="ach-content-card"><h3>Luminary</h3><div class="achimg" style="background-image: url('images/a8.jpg');"></div><p>The Luminary award, presented by my university for the exceptional contributions and commitment displayed for a period of 3 years in the campus. This served as a huge confidence boost. Makes me wanna keep pushing and hustling to the best I can, knowing that my story is seen and appreciated!</p><div class="achscr">▼</div></div>
                         </div>
                     </div>
                     <div class="rf">▶</div>
