--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/achieve.css">
+    <link rel="stylesheet" href="css/exp.css">
 </head>
 <body>
 
@@ -277,7 +278,7 @@
                         <div class="achcard">
                             <div class="ach-date">04/07/2024</div>
                             <div class="ach-timeline"><div class="dash"></div><div class="circle">7</div><div class="dash"></div></div>
-                            <div class="ach-content-card"><h3>4th Uni Rank</h3><div class="achimg" style="background-image: url('images/a7.jpg');"></div><p>The Chancellor Scholarship again for the second consecutive year! But this time, it was for securing the 9th uni rank (a climb from the previous 4th) Received a cheque of ₹18,500 once again. My CGPA was 9.55 during this time. Happens when academics meets consistency!</p><div class="achscr">▼</div></div>
+                            <div class="ach-content-card"><h3>4th Uni Rank</h3><div class="achimg" style="background-image: url('images/a7.jpg');"></div><p>The Chancellor Scholarship again for the second consecutive year! But this time, it was for securing the 4th uni rank (a climb from the previous 9th) Received a cheque of ₹18,500 once again. My CGPA was 9.55 during this time. Happens when academics meets consistency!</p><div class="achscr">▼</div></div>
                         </div>
                         <div class="achcard">
                             <div class="ach-date">03/03/2025</div>
@@ -304,7 +305,14 @@
                 <h1 class="sector-label">SECTOR 5</h1>
                 <h2 class="about-label">EXPERIENCES</h2>
             </div>
-
+            <div class="exp">
+                <p class="aboutme">
+                    Every experience here added real weight to who I am—both as a student and a builder. From an internship I landed recently to club roles that tested my leadership, these moments weren’t always planned, but they mattered. And unexpected turns which taught me a lot. This section is a glimpse into that journey of growth, resilience, and purpose. 
+                </p>
+                <div class="expcontent">
+                    
+                </div>
+            </div>
             <img class="toprail" src="images/toprail.png">
             <img class="tracks" src="images/tracks.png">
             <img class="bottomrail" src="images/toprail.png">
