--- a/index.html
+++ b/index.html
@@ -310,8 +310,27 @@
                     Every experience here added real weight to who I am—both as a student and a builder. From an internship I landed recently to club roles that tested my leadership, these moments weren’t always planned, but they mattered. And unexpected turns which taught me a lot. This section is a glimpse into that journey of growth, resilience, and purpose. 
                 </p>
                 <div class="expcontent">
-                    
-                </div>
+                    <div class="lf">◀</div>
+                    <div class="expcont">
+                        <div class="expcard">
+                            <div class="e1">IIT Intern</div><div class="e2" style="background-image: url('images/e1.jpg');"></div>
+                            <div class="e3">I got a huge oppurtunity to work at IIT Madras on the 5G Test-bed Project under guidance of Dr. Radha Krishna Ganti for a period of 3 months, starting from 10th June 2025. My skills in AI and working with embedded systems (also with my exceptional academic record) contributed in getting me this internship. The aim? optimize 5G towers with the power of AI.</div>
+                        </div>
+                        <div class="expcard">
+                            <div class="e1">F.F.I 2025</div><div class="e2" style="background-image: url('images/e2.jpg');"></div>
+                            <div class="e3">This was a totally unexpected but an amazing experience in my life. I was invited by the CEO of Ultraviolette Autommotive Ltd himself, Mr.Narayan Subramaniam (after noticing HEDIS on LinkedIn) to attend "Fast Forward India 2025", an exclusive tech display event in Taj, Bangalore - which showcased the peak of Indian EBike tech. Got a lot of networking done with massively reputed people!</div>
+                        </div>
+                        <div class="expcard">
+                            <div class="e1">Web Lecture</div><div class="e2" style="background-image: url('images/e3.jpg');"></div>
+                            <div class="e3">As the Vice President of Sathyabama Coding Club, I organised and lectured on web development of my 100+ juniors who had less to no knowledge about the domain. The content of the event wasn't just about making the students listen to a speech but to actually learn by coding on their own laptops, structured by a mini project based development plan. Got many positive responses!</div>
+                        </div>
+                        <div class="expcard">
+                            <div class="e1">OutReach</div><div class="e2" style="background-image: url('images/e4.jpg');"></div>
+                            <div class="e3">I volunteered to contribute to a student outreach/drug abuse awareness program where I, along with my mates visited a Government school in Chennai. It was a good experience talking infront of the class 10 and 12 students about the importance of higher studies and what facilities are available for them. The students were really interested and even came to me for clearing their doubts.</div>
+                        </div>
+                    </div>
+                    <div class="rf">▶</div>
+                </div>           
             </div>
             <img class="toprail" src="images/toprail.png">
             <img class="tracks" src="images/tracks.png">
@@ -323,7 +342,15 @@
                 <h1 class="sector-label">SECTOR 6</h1>
                 <h2 class="about-label">RESUME</h2>
             </div>
-
+            <div class="exp">
+                <p class="aboutme">
+                    Every experience here added real weight to who I am—both as a student and a builder. From an internship I landed recently to club roles that tested my leadership, these moments weren’t always planned, but they mattered. And unexpected turns which taught me a lot. This section is a glimpse into that journey of growth, resilience, and purpose.
+                </p>
+                <div class="rcont">
+                    <div class="resume"><img src="images/resume.jpg" style="width: 100%; height: auto;"></div>
+                    <a class="download" href="https://drive.google.com/file/d/1NCqtjqOZTZAnRCwSo3eAok61Ada56PVF/view?usp=drive_link">Download Resume</a>
+                </div>
+            </div>
             <img class="toprail" src="images/toprail.png">
             <img class="tracks" src="images/tracks.png">
             <img class="bottomrail" src="images/toprail.png">
