main content done

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         </div>
                         <div class="expcard">
                             <div class="e1">Web Lecture</div><div class="e2" style="background-image: url('images/e3.jpg');"></div>
-                            <div class="e3">As the Vice President of Sathyabama Coding Club, I organised and lectured on web development of my 100+ juniors who had less to no knowledge about the domain. The content of the event wasn't just about making the students listen to a speech but to actually learn by coding on their own laptops, structured by a mini project based development plan. Got many positive responses!</div>
+                            <div class="e3">As the Cluster Coordinator of Sathyabama Coding Club, I organised and lectured on web development of my 100+ juniors who had less to no knowledge about the domain. The content of the event wasn't just about making the students listen to a speech but to actually learn by coding on their own laptops, structured by a mini project based development plan. Got many positive responses!</div>
                         </div>
                         <div class="expcard">
                             <div class="e1">OutReach</div><div class="e2" style="background-image: url('images/e4.jpg');"></div>
@@ -355,7 +355,20 @@
             <img class="tracks" src="images/tracks.png">
             <img class="bottomrail" src="images/toprail.png">
         </div>
-        <div class="footer" id="s6"></div>
+        <div class="footer" id="s6">
+            <p class="endtext">
+                Thank You for visiting my Portfolio! Hope you got to know pretty much everything you need to know about me. If you wanna talk or discuss beyond, sure do reach out through any of the below links! 
+            </p>
+            <div class="ccontent">
+                <a class="c" href="mailto:rakkesh10234@gmail.com"><img class="i" src="images/email.png"></a>
+                <a class="c" href="https://linkedin.com/in/rakkesh-g"><img class="i" src="images/linkedin.png"></a>
+                <a class="c" href="https://github.com/aglitchinreality1"><img class="i" src="images/github.png"></a>
+                <a class="c" href="https://www.instagram.com/_a_glitch_in_reality_"><img class="i" src="images/instagram.png"></a>
+                <a class="c" href="https://wa.me/919840915425"><img class="i" src="images/whatsapp.png"></a>
+                <a class="c" href="http://www.youtube.com/@justrkstuff8266"><img class="i" src="images/youtube.png"></a>
+            </div>
+            <button class="go" id="go">Go To Top</button>
+        </div>
     </div>
 
 
