--- a/index.html
+++ b/index.html
@@ -18,16 +18,31 @@
 <body>
 
     <div class="liftcontent">
+        <div class="select controls" id="controls">
+            <div class="choose a"></div>
+            <div class="choose liftb">
+                <button class="b" id="1">1</button>
+                <button class="b" id="2">2</button>
+                <button class="b" id="3">3</button>
+                <button class="b" id="4">4</button>
+                <button class="b" id="5">5</button>
+                <button class="b" id="6">6</button>
+                <button class="b" id="7">7</button>
+            </div>
+        </div>
         <img class="lift" src="images/lift.png">
         <img class="man" id="man" src="images/man.png">
+        <div class="select loc" id="loc">
+            <div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line">
+            </div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line">
+            </div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div>
+        </div>
     </div>
     <div class="main particle-container">
         <video autoplay muted loop playsinline><source src="images/mainback.mp4" type="video/mp4"></video>
         <div class="video-overlay"></div>
 
-        <!-- Navigation -->
         <nav class="navbar">
-            <!-- Desktop Navigation -->
             <div class="nav-container desktop-nav">
                 <div class="nav-button b"><span>ABOUT ME</span></div>
                 <div class="nav-button b"><span>SKILLS</span></div>
@@ -37,8 +52,6 @@
                 <div class="nav-button b"><span>RESUME</span></div>
                 <div class="nav-button b"><span>CONTACT</span></div>
             </div>
-
-            <!-- Mobile Navigation -->
             <div class="mobile-nav">
                 <div class="mobile-nav-toggle">
                     <span>SECTORS</span>
@@ -344,7 +357,7 @@
             </div>
             <div class="exp">
                 <p class="aboutme">
-                    Every experience here added real weight to who I am—both as a student and a builder. From an internship I landed recently to club roles that tested my leadership, these moments weren’t always planned, but they mattered. And unexpected turns which taught me a lot. This section is a glimpse into that journey of growth, resilience, and purpose.
+                    Finally, here’s the part where it all comes together. My resume. A compact, curated snapshot of everything I’ve strived toward over the past three years. From projects and internships to awards and key responsibilities, it’s all packed into this single document. This resume reflects the dedication, hustle, and experiences that shaped me into the person I am.
                 </p>
                 <div class="rcont">
                     <div class="resume"><img src="images/resume.jpg" style="width: 100%; height: auto;"></div>
@@ -368,6 +381,7 @@
                 <a class="c" href="http://www.youtube.com/@justrkstuff8266"><img class="i" src="images/youtube.png"></a>
             </div>
             <button class="go" id="go">Go To Top</button>
+            <div class="end">© 2025 Rakkesh. All rights reserved.</div>
         </div>
     </div>
 
