--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/achieve.css">
     <link rel="stylesheet" href="css/exp.css">
+    <link rel="preload" as="image" href="images/me.png">
 </head>
 <body>
 
@@ -328,6 +329,10 @@
                         <div class="expcard">
                             <div class="e1">IIT Intern</div><div class="e2" style="background-image: url('images/e1.jpg');"></div>
                             <div class="e3">I got a huge oppurtunity to work at IIT Madras on the 5G Test-bed Project under guidance of Dr. Radha Krishna Ganti for a period of 3 months, starting from 10th June 2025. My skills in AI and working with embedded systems (also with my exceptional academic record) contributed in getting me this internship. The aim? optimize 5G towers with the power of AI.</div>
+                        </div>
+                        <div class="expcard">
+                            <div class="e1">TTDF Sym</div><div class="e2" style="background-image: url('images/e5.jpg');"></div>
+                            <div class="e3">As a part of my internship at IIT Madras, the intern team volunteered to organise the TTDF Symposium 2025 Event which happened between 19th - 21st June at IIT Research park. It was one of the largest symposiums organised by IIT where PhD scholars visited from all over India, to talk about and listen to various tech development in the Telecommunication domain.</div>
                         </div>
                         <div class="expcard">
                             <div class="e1">F.F.I 2025</div><div class="e2" style="background-image: url('images/e2.jpg');"></div>
