--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
                             <div class="event"><span class="year">2025</span><span class="desc">HEDIS V2 Initiated</span></div>
                             <div class="event"><span class="year">2025</span><span class="desc">Theorized ELYRA</span></div>
                             <div class="event"><span class="year">2025</span><span class="desc">Intern at IIT Madras</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">Invented Handover Alg.</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">Provisional Patent</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">IEEE WCNC Paper</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">Developed MapGen</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">IEEE CICN Paper</span></div>
+                            <div class="event"><span class="year">2025</span><span class="desc">Placed at HashedIn</span></div>
                             <div class="event"><span class="year" style="border-right: 0px;">2025</span><span class="desc">To Be Continued...</span></div>
                         </div>
                         <img class="fade" src="images/fade.png">
@@ -229,11 +235,11 @@
                         </div>
                       </div>
                       <div class="project-card second-card">
-                        <div class="project-title" id="p4">E.L.Y.R.A</div>
+                        <div class="project-title" id="p4">RSRP MapGen</div>
                         <div class="project-content">
                           <div class="top-box box2" id="p5"></div>
                           <div class="bottom-box" id="p6">
-                            E.L.Y.R.A (Elastic Learning Yield for Resource Allocation) is a smart system I’ve been building that uses AI to manage and improve how 5G networks work. It’s all about making things faster, smoother, and more efficient. The image above is AI-generated and just gives a rough idea. The real stuff is still under wraps because ELYRA is in active development right now. Full details are kept Classified until it’s ready to be revealed. But yeah, this one’s special. Stay tuned!
+                            MapGen is a spatial RSRP map generator I built to simulate and visualize 5G cellular coverage with high accuracy. It transforms raw environmental data into precise signal propagation maps. The cover image is a conceptual visualization. The actual software is a sophisticated pipeline that integrates OpenStreetMap clutter data, performs deterministic ray-casting for LOS/NLOS conditions, and applies 3GPP TR 38.901 standard path-loss models. The tool is currently in a closed development phase, and the core architecture is not publicly available. It represents a significant step in my work to bridge theoretical radio propagation models with practical, deployment-ready software.
                           </div>
                         </div>
                       </div>
@@ -301,8 +307,13 @@
                         </div>
                         <div class="achcard">
                             <div class="ach-date">24/04/2025</div>
-                            <div class="ach-timeline"><div class="dash"></div><div class="circle">9</div><div class="dash" style="background-color: transparent;"></div></div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">9</div><div class="dash"></div></div>
                             <div class="ach-content-card"><h3>Luminary</h3><div class="achimg" style="background-image: url('images/a8.jpg');"></div><p>The Luminary award, presented by my university for the exceptional contributions and commitment displayed for a period of 3 years in the campus. This served as a huge confidence boost. Makes me wanna keep pushing and hustling to the best I can, knowing that my story is seen and appreciated!</p><div class="achscr">▼</div></div>
+                        </div>
+                        <div class="achcard">
+                            <div class="ach-date">28/07/2025</div>
+                            <div class="ach-timeline"><div class="dash"></div><div class="circle">10</div><div class="dash" style="background-color: transparent;"></div></div>
+                            <div class="ach-content-card"><h3>4th Uni Rank</h3><div class="achimg" style="background-image: url('images/a10.jpg');"></div><p>The Chancellor Scholarship again for the third consecutive year! It was for securing the 4th uni rank (steady from the previous 4th) Received a cheque of ₹18,500 once again. My CGPA was 9.5 during this time. Happens when academics meets consistency!</p><div class="achscr">▼</div></div>
                         </div>
                     </div>
                     <div class="rf">▶</div>
@@ -328,7 +339,7 @@
                     <div class="expcont">
                         <div class="expcard">
                             <div class="e1">IIT Intern</div><div class="e2" style="background-image: url('images/e1.jpg');"></div>
-                            <div class="e3">I got a huge oppurtunity to work at IIT Madras on the 5G Test-bed Project under guidance of Dr. Radha Krishna Ganti for a period of 3 months, starting from 10th June 2025. My skills in AI and working with embedded systems (also with my exceptional academic record) contributed in getting me this internship. The aim? optimize 5G towers with the power of AI.</div>
+                            <div class="e3">I got a huge oppurtunity to work at IIT Madras on the 5G Test-bed Project under guidance of Dr. Radha Krishna Ganti for a period of about 4 months, from 10th June 2025 to 30th September 2025. My skills in AI and working with embedded systems (also with my exceptional academic record) contributed in getting me this internship. The aim? optimize 5G towers with the power of AI and computer algorithms.</div>
                         </div>
                         <div class="expcard">
                             <div class="e1">TTDF Sym</div><div class="e2" style="background-image: url('images/e5.jpg');"></div>
@@ -365,8 +376,8 @@
                     Finally, here’s the part where it all comes together. My resume. A compact, curated snapshot of everything I’ve strived toward over the past three years. From projects and internships to awards and key responsibilities, it’s all packed into this single document. This resume reflects the dedication, hustle, and experiences that shaped me into the person I am.
                 </p>
                 <div class="rcont">
-                    <div class="resume"><img src="images/resume.jpg" style="width: 100%; height: auto;"></div>
-                    <a class="download" href="https://drive.google.com/file/d/1NCqtjqOZTZAnRCwSo3eAok61Ada56PVF/view?usp=drive_link">Download Resume</a>
+                    <div class="resume"><img src="images/resume.png" style="width: 100%; height: auto;"></div>
+                    <a class="download" href="https://drive.google.com/file/d/1VBCEj5HD9V_HSKUI_48YxKK7LksLypmW/view?usp=sharing">Download Resume</a>
                 </div>
             </div>
             <img class="toprail" src="images/toprail.png">
